--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,60 @@
+
 body {
   margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.accounts-nav {
+  display: flex;
+}
+
+.accounts-nav> div {
+  padding: 10px;
+}
+
+.accounts-nav > :first-child {
+  margin-left: auto;
+}
+
+
+.main-dashboard > div {
+  padding: 10px 20px;
+}
+
+.main-dashboard {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.sale-detail_wrapper {
+  background: #f2f0f8;
+  display: flex;
+}
+
+.sale-detail {
+  padding: 20px;
+  font-size: 20px;
+}
+
+.total-billing {
+  margin-left: auto;
+  width: 33%;
+  text-align: center;
+}
+
+.SaleProductsWrapper{
+  padding: 5px;
+}
+
+.addproduct{
+  display: flex;
+  float: right;
+  margin: 10px;
+}
+
+
+.MuiAppBar-colorPrimary-113 {
+  color: black !important;
+  background-color: #f2f0f8 !important;
 }
